added view and submission functionality

--- a/MyAPIDesign/Base.lproj/Main.storyboard
+++ b/MyAPIDesign/Base.lproj/Main.storyboard
@@ -1,8 +1,82 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zvJ-xk-U2U">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Survey View Controller-->
+        <scene sceneID="Ele-X9-uW4">
+            <objects>
+                <viewController id="1Hw-Uj-cte" customClass="SurveyViewController" customModule="MyAPIDesign" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2sW-nH-kR8"/>
+                        <viewControllerLayoutGuide type="bottom" id="fOo-6s-mwE"/>
+                    </layoutGuides>
+                    <view key="view" opaque="NO" contentMode="scaleToFill" id="4be-5j-w3O">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yq6-Tf-7Qn">
+                                <rect key="frame" x="20" y="72" width="280" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Next Coding Language?" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0uS-y9-NSz">
+                                <rect key="frame" x="20" y="110" width="280" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lAj-yh-gGt">
+                                <rect key="frame" x="136" y="148" width="49" height="30"/>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="submitButtonTapped:" destination="1Hw-Uj-cte" eventType="touchUpInside" id="NIz-7E-Wa3"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.17659514275682481" green="0.27839782937827273" blue="0.48246597405353531" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="0uS-y9-NSz" firstAttribute="leading" secondItem="4be-5j-w3O" secondAttribute="leading" constant="20" id="6zJ-Oh-0TT"/>
+                            <constraint firstItem="lAj-yh-gGt" firstAttribute="centerX" secondItem="4be-5j-w3O" secondAttribute="centerX" id="BcY-uL-7Vj"/>
+                            <constraint firstAttribute="trailing" secondItem="yq6-Tf-7Qn" secondAttribute="trailing" constant="20" id="GMM-xs-gJ9"/>
+                            <constraint firstItem="0uS-y9-NSz" firstAttribute="top" secondItem="yq6-Tf-7Qn" secondAttribute="bottom" constant="8" id="VLT-X2-hh3"/>
+                            <constraint firstItem="lAj-yh-gGt" firstAttribute="top" secondItem="0uS-y9-NSz" secondAttribute="bottom" constant="8" id="ZGr-aM-DYq"/>
+                            <constraint firstItem="yq6-Tf-7Qn" firstAttribute="top" secondItem="2sW-nH-kR8" secondAttribute="bottom" constant="8" id="oEi-sd-Ldc"/>
+                            <constraint firstAttribute="trailing" secondItem="0uS-y9-NSz" secondAttribute="trailing" constant="20" id="svy-Jx-dgv"/>
+                            <constraint firstItem="yq6-Tf-7Qn" firstAttribute="leading" secondItem="4be-5j-w3O" secondAttribute="leading" constant="20" id="wkQ-IY-T3v"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="QLn-ae-CY2"/>
+                    <connections>
+                        <outlet property="nameTextField" destination="yq6-Tf-7Qn" id="Xcp-HE-pK0"/>
+                        <outlet property="responseTextField" destination="0uS-y9-NSz" id="dxl-90-WTa"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rcX-bG-Z6G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1012" y="464"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="z4G-ol-oU4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zvJ-xk-U2U" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="v7d-UP-NFw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1Hw-Uj-cte" kind="relationship" relationship="rootViewController" id="iFg-jE-bsf"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cPv-Em-ea6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="615" y="464"/>
+        </scene>
+    </scenes>
 </document>
