--- a/MyAPIDesign/Base.lproj/Main.storyboard
+++ b/MyAPIDesign/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="zvJ-xk-U2U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="tUO-Tn-ngq">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -57,12 +57,58 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rcX-bG-Z6G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1012" y="464"/>
+            <point key="canvasLocation" x="1824" y="464"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Responses Table View Controller-->
+        <scene sceneID="zo6-tF-bmr">
+            <objects>
+                <tableViewController id="iO2-tZ-cCw" customClass="ResponsesTableViewController" customModule="MyAPIDesign" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="N69-qf-8QG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="responseCell" textLabel="e1G-ox-0Z3" detailTextLabel="3Gh-uk-Xfg" style="IBUITableViewCellStyleValue1" id="YZv-MA-Nmu">
+                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YZv-MA-Nmu" id="dIE-CH-xzm">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e1G-ox-0Z3">
+                                            <rect key="frame" x="15" y="12" width="32" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3Gh-uk-Xfg">
+                                            <rect key="frame" x="263" y="12" width="42" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="iO2-tZ-cCw" id="szi-Hg-reI"/>
+                            <outlet property="delegate" destination="iO2-tZ-cCw" id="b4J-1Q-kfo"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="8SU-IS-uGG"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Sq-Np-aT2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1824" y="-95"/>
+        </scene>
+        <!--Survey-->
         <scene sceneID="z4G-ol-oU4">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zvJ-xk-U2U" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Survey" id="JBs-tt-z1d"/>
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="v7d-UP-NFw">
@@ -76,7 +122,45 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cPv-Em-ea6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="615" y="464"/>
+            <point key="canvasLocation" x="1427" y="464"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="c27-G9-I0p">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="tUO-Tn-ngq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="GWl-vW-BcQ">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="zvJ-xk-U2U" kind="relationship" relationship="viewControllers" id="Wwq-bI-TYb"/>
+                        <segue destination="ani-iK-yH4" kind="relationship" relationship="viewControllers" id="Pa2-6g-mEK"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1yf-je-cYM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="997" y="464"/>
+        </scene>
+        <!--Responses-->
+        <scene sceneID="r6y-Kj-yJk">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ani-iK-yH4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Responses" id="p6s-X3-dsN"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="gp1-gP-XaA">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="iO2-tZ-cCw" kind="relationship" relationship="rootViewController" id="4uX-Z3-KfE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uqG-4E-xub" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1427" y="-95"/>
         </scene>
     </scenes>
 </document>
